- STREL-267 forced indel call does not appear in somatic output
v2.7.0
- STREL-184 enable somatic indel EVS
- STREL-228 improve runtime for references with many small contigs
- STREL-210 Retrain germline EVS
- STREL-164 document short haplotyping
- STREL-254 fix haploid indel call exception
- STREL-227 shift away from legacy naming schemes
- STREL-240 make active regions non-overlapping
- STREL-239 fix haploid nonvariant indels in multi-sample analysis
- STREL-238 add multi-sample ploidy specification using vcf
- STREL-217 integrate short haplotying with multi-sample support
- STREL-158 support multi-sample in standard germline analysis
- STREL-218 Tune indel parameters for improved het/hom ratio
- STREL-216 relax normalization requirement for indel candidates to a warning
- STREL-198 Update germline EVS using mixed training data (variety of platforms/chemistries/depths) 
- STREL-154 adjust active window size depending on neighboring sequences
- STREL-188 haplotype generation includes soft-clipped reads
v2.6.0
- STREL-163 Update germline EVS model training with ambiguous call handling
- STREL-122/STARKA-454 Updated somatic scoring model, integrate somatic indel EVS model
- STREL-175 restore somatic callability tract
- STREL-155 determine indel candidacy in active regions
- STREL-75 fix sample limit in pedicure
- STREL-118 relax MMDF using short haplotyping
v2.5.0
- STREL-138 adjust indel theta based on hpol context in germline model
- STREL-124 integrate new RF scoring model for germline variants
- STREL-128 correctly call overlapping same pos/same length insertions
- STARKA-371 enforce indel normalization on vcf input
- STARKA-372 prototype RNA-Seq support
- STREL-50 add active region detection and short haplotype enumeration
- STREL-103 add new diplotype model for germline indels
- STREL-111 Updated somatic EVS model to support liquid tumor and bwamem bams
- STREL-116 fix germline MQ/MQ0, EVS feature norm, add new EVS dev features